newgrammar/YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'if'", "'then'", 
                     "'else'", "'fi'", "'while'", "'loop'", "'pool'", "'return'", 
                     "','", "'@'", "'.'", "'new'", "'*'", "'/'", "'+'", 
                     "'-'", "'<='", "'<'", "'='", "'class'", "'inherits'", 
                     "'true'", "'false'", "'isvoid'", "'not'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'~'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'<-'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "INHERITS", 
                      "TRUE", "FALSE", "ISVOID", "NOT", "OBJECT_ID", "TYPE_ID", 
                      "STRING", "INT", "TILDE", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "LPAREN", "RPAREN", "ASSIGN", "COLON" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_feature = 2
    RULE_statement = 3
    RULE_expressionStatement = 4
    RULE_returnStatement = 5
    RULE_formals = 6
    RULE_formal = 7
    RULE_expression = 8

    ruleNames =  [ "program", "classDef", "feature", "statement", "expressionStatement", 
                   "returnStatement", "formals", "formal", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    CLASS=23
    INHERITS=24
    TRUE=25
    FALSE=26
    ISVOID=27
    NOT=28
    OBJECT_ID=29
    TYPE_ID=30
    STRING=31
    INT=32
    TILDE=33
    WS=34
    LINE_COMMENT=35
    BLOCK_COMMENT=36
    LPAREN=37
    RPAREN=38
    ASSIGN=39
    COLON=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassDefContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.classDef()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==23):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE_ID)
            else:
                return self.getToken(YAPLParser.TYPE_ID, i)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)




    def classDef(self):

        localctx = YAPLParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(YAPLParser.CLASS)
            self.state = 24
            self.match(YAPLParser.TYPE_ID)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 25
                self.match(YAPLParser.INHERITS)
                self.state = 26
                self.match(YAPLParser.TYPE_ID)


            self.state = 29
            self.match(YAPLParser.T__0)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 30
                self.feature()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(YAPLParser.T__1)
            self.state = 37
            self.match(YAPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def formals(self):
            return self.getTypedRuleContext(YAPLParser.FormalsContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.StatementContext)
            else:
                return self.getTypedRuleContext(YAPLParser.StatementContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(YAPLParser.OBJECT_ID)
                self.state = 40
                self.match(YAPLParser.COLON)
                self.state = 41
                self.match(YAPLParser.TYPE_ID)
                self.state = 42
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.match(YAPLParser.OBJECT_ID)
                self.state = 44
                self.match(YAPLParser.LPAREN)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==29:
                    self.state = 45
                    self.formals()


                self.state = 48
                self.match(YAPLParser.RPAREN)
                self.state = 49
                self.match(YAPLParser.COLON)
                self.state = 50
                self.match(YAPLParser.TYPE_ID)
                self.state = 51
                self.match(YAPLParser.T__0)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 536873234) != 0):
                    self.state = 52
                    self.statement()
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 58
                self.match(YAPLParser.T__1)
                self.state = 59
                self.match(YAPLParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.StatementContext)
            else:
                return self.getTypedRuleContext(YAPLParser.StatementContext,i)


        def expressionStatement(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(YAPLParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = YAPLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(YAPLParser.T__3)
                self.state = 63
                self.expression(0)
                self.state = 64
                self.match(YAPLParser.T__4)
                self.state = 65
                self.statement()
                self.state = 66
                self.match(YAPLParser.T__5)
                self.state = 67
                self.statement()
                self.state = 68
                self.match(YAPLParser.T__6)
                self.state = 69
                self.match(YAPLParser.T__2)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(YAPLParser.T__7)
                self.state = 72
                self.expression(0)
                self.state = 73
                self.match(YAPLParser.T__8)
                self.state = 74
                self.statement()
                self.state = 75
                self.match(YAPLParser.T__9)
                self.state = 76
                self.match(YAPLParser.T__2)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(YAPLParser.T__0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 536873234) != 0):
                    self.state = 79
                    self.statement()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 85
                self.match(YAPLParser.T__1)
                self.state = 86
                self.match(YAPLParser.T__2)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.expressionStatement()
                self.state = 88
                self.match(YAPLParser.T__2)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.returnStatement()
                self.state = 91
                self.match(YAPLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def ASSIGN(self):
            return self.getToken(YAPLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = YAPLParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(YAPLParser.OBJECT_ID)
            self.state = 96
            self.match(YAPLParser.ASSIGN)
            self.state = 97
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = YAPLParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(YAPLParser.T__10)
            self.state = 100
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_formals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormals" ):
                listener.enterFormals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormals" ):
                listener.exitFormals(self)




    def formals(self):

        localctx = YAPLParser.FormalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.formal()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 103
                self.match(YAPLParser.T__11)
                self.state = 104
                self.formal()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(YAPLParser.OBJECT_ID)
            self.state = 111
            self.match(YAPLParser.COLON)
            self.state = 112
            self.match(YAPLParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)


        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def TILDE(self):
            return self.getToken(YAPLParser.TILDE, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 115
                self.match(YAPLParser.INT)
                pass

            elif la_ == 2:
                self.state = 116
                self.match(YAPLParser.OBJECT_ID)
                pass

            elif la_ == 3:
                self.state = 117
                self.match(YAPLParser.STRING)
                pass

            elif la_ == 4:
                self.state = 118
                self.match(YAPLParser.TRUE)
                pass

            elif la_ == 5:
                self.state = 119
                self.match(YAPLParser.FALSE)
                pass

            elif la_ == 6:
                self.state = 120
                self.match(YAPLParser.ISVOID)
                self.state = 121
                self.expression(11)
                pass

            elif la_ == 7:
                self.state = 122
                self.match(YAPLParser.OBJECT_ID)
                self.state = 123
                self.match(YAPLParser.LPAREN)
                self.state = 124
                self.expression(0)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 125
                    self.match(YAPLParser.T__11)
                    self.state = 126
                    self.expression(0)
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 132
                self.match(YAPLParser.RPAREN)
                pass

            elif la_ == 8:
                self.state = 134
                self.match(YAPLParser.T__14)
                self.state = 135
                self.match(YAPLParser.TYPE_ID)
                pass

            elif la_ == 9:
                self.state = 136
                self.match(YAPLParser.LPAREN)
                self.state = 137
                self.expression(0)
                self.state = 138
                self.match(YAPLParser.RPAREN)
                pass

            elif la_ == 10:
                self.state = 140
                self.match(YAPLParser.NOT)
                self.state = 141
                self.expression(2)
                pass

            elif la_ == 11:
                self.state = 142
                self.match(YAPLParser.TILDE)
                self.state = 143
                self.expression(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 187
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 185
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = YAPLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 146
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 147
                        _la = self._input.LA(1)
                        if not(_la==16 or _la==17):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 148
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = YAPLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 149
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 150
                        _la = self._input.LA(1)
                        if not(_la==18 or _la==19):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 151
                        self.expression(6)
                        pass

                    elif la_ == 3:
                        localctx = YAPLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 152
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 153
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340032) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 154
                        self.expression(5)
                        pass

                    elif la_ == 4:
                        localctx = YAPLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 155
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 156
                        self.match(YAPLParser.T__12)
                        self.state = 157
                        self.match(YAPLParser.TYPE_ID)
                        self.state = 158
                        self.match(YAPLParser.T__13)
                        self.state = 159
                        self.match(YAPLParser.OBJECT_ID)
                        self.state = 160
                        self.match(YAPLParser.LPAREN)
                        self.state = 161
                        self.expression(0)
                        self.state = 166
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==12:
                            self.state = 162
                            self.match(YAPLParser.T__11)
                            self.state = 163
                            self.expression(0)
                            self.state = 168
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 169
                        self.match(YAPLParser.RPAREN)
                        pass

                    elif la_ == 5:
                        localctx = YAPLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 171
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 172
                        self.match(YAPLParser.T__13)
                        self.state = 173
                        self.match(YAPLParser.OBJECT_ID)
                        self.state = 174
                        self.match(YAPLParser.LPAREN)
                        self.state = 175
                        self.expression(0)
                        self.state = 180
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==12:
                            self.state = 176
                            self.match(YAPLParser.T__11)
                            self.state = 177
                            self.expression(0)
                            self.state = 182
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 183
                        self.match(YAPLParser.RPAREN)
                        pass

             
                self.state = 189
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 8)
         




